# python-cm4-fan-controller

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cm4-fan-controller.service  controller.py  pyproject.toml
.github/workflows/: build.yaml
